[tool.poetry]
name = "ena"
version = "0.1.0"
description = ""
authors = ["arkhon7 <reviuy9@gmail.com>"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
usefixtures = "setup_method"


[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "3.10.6"
hikari-lightbulb = "^2.2.0"
python-dotenv = "^0.19.2"
simpleeval = "^0.9.12"
hikari = "^2.0.0-alpha.110"
hikari-miru = "^1.1.1"
asyncpg = "^0.26.0"
aiocache = "^0.11.1"
pysaucenao = "^1.6.1"


[tool.poetry.dev-dependencies]
pytest = ">=6.1.0"
black = {version = "^22.1.0", allow-prereleases = true}
pylint = "^2.12.2"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest-asyncio = "^0.19.0"
pytest-benchmark = "^3.4.1"
nest-asyncio = "^1.5.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
